# Qwen-Finetune-Air

./: .gitignore  MAXIMUM_TRAINING.md  README.md  TRAINING_REPORT.md  analyze_training.py  create_analysis.py  data_example.jsonl  generate_dataset.py  lora_config.yaml  pyproject.toml  train.py  train_maximum.py  train_real.py  train_simple.py  tutorial.py
data/: test.jsonl  train.jsonl  valid.jsonl
