[project]
name = "qwen-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "huggingface-hub>=0.36.0",
    "mlx-lm>=0.28.4",
    "mlx>=0.30.0",
    "transformers>=4.40.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
]
